<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.5">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:text="@string/ctr_ui_label_status"
                android:id="@+id/status_label"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryWhite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:text=""
                android:id="@+id/status_textview"
                android:typeface="serif"
                android:textColor="@color/colorLightGreen" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.5">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:text="@string/ctr_ui_label_response"
                android:id="@+id/response_label"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryWhite"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:text=""
                android:id="@+id/response_textview"
                android:typeface="serif"
                android:textColor="@color/colorLightGreen" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:id="@+id/motion_textview"
        android:textSize="64sp"
        android:textColor="@color/colorLightPink"
        android:layout_marginBottom="15dp"
        android:text="@string/ctr_ui_center_default"
        android:layout_weight="1"
        android:gravity="bottom"
        android:textStyle="bold"
        android:typeface="serif" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rowCount="3"
            android:columnCount="3"
            android:layout_weight="0.9">

            <Button
                android:layout_row="0"
                android:layout_column="1"
                android:layout_width="65dp"
                android:layout_height="55dp"
                android:text="@string/ctr_ui_btn_forward"
                android:id="@+id/forward_button"
                android:textStyle="bold"
                android:textColor="@color/colorLightGreen" />

            <Button
                android:layout_row="2"
                android:layout_column="1"
                android:layout_width="65dp"
                android:layout_height="55dp"
                android:text="@string/ctr_ui_btn_backward"
                android:id="@+id/reverse_button"
                android:textStyle="bold"
                android:textColor="@color/colorLightGreen" />

            <Button
                android:layout_row="1"
                android:layout_column="0"
                android:layout_width="65dp"
                android:layout_height="55dp"
                android:text="@string/ctr_ui_btn_left"
                android:id="@+id/left_button"
                android:textColor="@color/colorLightGreen"
                android:textStyle="bold" />

            <Button
                android:layout_row="1"
                android:layout_column="2"
                android:layout_width="65dp"
                android:layout_height="55dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:text="@string/ctr_ui_btn_right"
                android:id="@+id/right_button"
                android:textColor="@color/colorLightGreen"
                android:textStyle="bold" />

            <Button
                android:layout_row="1"
                android:layout_column="1"
                android:layout_width="65dp"
                android:layout_height="55dp"
                android:text="@string/ctr_ui_btn_stop"
                android:id="@+id/stop_button"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:textStyle="bold" />
        </GridLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center_vertical|bottom"
            android:layout_weight="0.1">

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ctr_ui_switch_sensor_enable"
                android:id="@+id/sensor_enable"
                android:checked="false"
                android:textColor="@color/colorLightGreen"
                android:textStyle="bold"
                style="@style/Base.Widget.AppCompat.Button.Borderless" />

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New ToggleButton"
                android:id="@+id/obj_detect_en_toggle"
                android:textStyle="bold"
                android:textColor="@color/colorLightGreen" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>